# releasable-target

./: .env  .gitignore  Makefile  README.md  buildspec.yml  config.sh  package-lock.json  package.json
.github/workflows/: codebuild.yaml  pr_slack.yaml
cdk/: .gitignore  apply_buildspec.yaml
cdk/test/: releaseable_stack_test.py
exploratory-tests/: happy_path.http  happy_path_api.http
src/main/bash/: bootstrap  handler
src/main/cdk/: BaseStack.py  Pipfile  accounts.py  base_stack.py  cdktf.json  common_stack.py  config.py  env.py  lambda_updater.py  main.py  plan_buildspec.yaml  provider_factory.py  pyproject.toml  releasable_stack.py  shared.py
src/main/cdk/cdktf.out/stacks/release/: .terraform.lock.hcl  lambda.tf  output.tf  project.tf  terraform.tf
src/main/cdk/events/: cloudwatch_s3_write_trigger_codepipeline.json
src/main/cdk/policies/: lambda_service_role.json
src/main/cdk/test/: releaseable_stack_test.py
src/main/terraform/: .terraform.lock.hcl  apigateway.tf  lambda.tf  lambda_updater.py  manifest.json  pipeline.tf  project.tf  providers.tf  state.tf  terraform.tf  variables.tf  versions.tf  web.tf
src/main/terraform/policies/: lambda_service_policy.json  lambda_updater_service_role_lambda.json  terraform_policy.json
src/main/web/: build.template  config.js.template  index.html
terraform/: lambda_updater.py  output.tf  state.tf  variables.tf
