[tool.poetry]
name = "cdk"
version = "0.1.0"
description = ""
authors = ["Murray Tait <6074789+deathtumble@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cdktf = "^0.7.0"
cdktf-cdktf-provider-aws = "^2.0.13"
boto3 = "^1.20.12"
cdktf-cdktf-provider-archive = "^0.0.199"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
