[tool.poetry]
name = "cdk"
version = "0.1.0"
description = ""
authors = ["Murray Tait <6074789+deathtumble@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cdktf = "0.8.6"
cdktf-cdktf-provider-aws = "4.0.2"
boto3 = "^1.20.12"
pytest-mock = "^3.6.1"
murraytait-cdktf = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
